// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> it renders Select 1`] = `
<Select
  canOpen={true}
  items={
    Array [
      Object {
        "id": "1",
        "title": "test1",
      },
      Object {
        "id": "2",
        "title": "test2",
      },
    ]
  }
  keyNavigation={true}
  notFoundText="Ничего не нашлось"
>
  <div
    className="select"
  >
    <div
      className="select__control"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="select__title"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="select__title-inner"
        />
      </div>
      <span
        className="select__arrow"
      >
        <span
          className="select__arrow-inner"
        />
      </span>
    </div>
    <div
      className="select__list"
    >
      <div
        className="select__list-inner"
      >
        <SelectItem
          active={true}
          current={true}
          index={0}
          key="1"
          onHover={[Function]}
          onSelect={[Function]}
          title="test1"
        >
          <div
            className="select-item select-item_current select-item_active"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="select-item__title"
            >
              test1
            </div>
          </div>
        </SelectItem>
        <SelectItem
          active={false}
          current={false}
          index={1}
          key="2"
          onHover={[Function]}
          onSelect={[Function]}
          title="test2"
        >
          <div
            className="select-item"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="select-item__title"
            >
              test2
            </div>
          </div>
        </SelectItem>
      </div>
    </div>
  </div>
</Select>
`;

exports[`<Select /> it renders hidden input 1`] = `
<div
  className="select"
>
  <input
    name="test"
    type="hidden"
  />
  <div
    className="select__control"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="select__title"
      onClick={[Function]}
      tabIndex={0}
    >
      <div
        className="select__title-inner"
      />
    </div>
    <span
      className="select__arrow"
    >
      <span
        className="select__arrow-inner"
      />
    </span>
  </div>
  <div
    className="select__list"
  >
    <div
      className="select__list-inner"
    >
      <SelectItem
        active={true}
        current={true}
        index={0}
        key="1"
        onHover={[Function]}
        onSelect={[Function]}
        title="test1"
      />
      <SelectItem
        active={false}
        current={false}
        index={1}
        key="2"
        onHover={[Function]}
        onSelect={[Function]}
        title="test2"
      />
    </div>
  </div>
</div>
`;

exports[`<Select /> it renders search 1`] = `
<Select
  canOpen={true}
  items={
    Array [
      Object {
        "id": "1",
        "title": "test1",
      },
      Object {
        "id": "2",
        "title": "test2",
      },
    ]
  }
  keyNavigation={true}
  notFoundText="Ничего не нашлось"
  onChangeSearch={[Function]}
>
  <div
    className="select select_search"
  >
    <div
      className="select__control"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <input
        autoComplete="off"
        className="select__search-field"
        maxLength={60}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <span
        className="select__arrow"
      >
        <span
          className="select__arrow-inner"
        />
      </span>
    </div>
    <div
      className="select__list"
    >
      <div
        className="select__list-inner"
      >
        <SelectItem
          active={true}
          current={true}
          index={0}
          key="1"
          onHover={[Function]}
          onSelect={[Function]}
          title="test1"
        >
          <div
            className="select-item select-item_current select-item_active"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="select-item__title"
            >
              test1
            </div>
          </div>
        </SelectItem>
        <SelectItem
          active={false}
          current={false}
          index={1}
          key="2"
          onHover={[Function]}
          onSelect={[Function]}
          title="test2"
        >
          <div
            className="select-item"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="select-item__title"
            >
              test2
            </div>
          </div>
        </SelectItem>
      </div>
    </div>
  </div>
</Select>
`;

exports[`<Select /> it renders witout icon 1`] = `
<div
  className="select"
>
  <div
    className="select__control"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="select__title"
      onClick={[Function]}
      tabIndex={0}
    >
      <div
        className="select__title-inner"
      />
    </div>
    <span
      className="select__arrow"
    >
      <span
        className="select__arrow-inner"
      />
    </span>
  </div>
  <div
    className="select__list"
  >
    <div
      className="select__list-inner"
    >
      <div
        className="select__not-found"
      >
        Ничего не нашлось
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> it renders witout icon 2`] = `
<div
  className="select"
>
  <div
    className="select__control"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="select__title"
      onClick={[Function]}
      tabIndex={0}
    >
      <div
        className="select__title-inner"
      />
    </div>
    <div
      className="select__icon-box"
    >
      <test-file-stub />
    </div>
  </div>
  <div
    className="select__list"
  >
    <div
      className="select__list-inner"
    >
      <div
        className="select__not-found"
      >
        Ничего не нашлось
      </div>
    </div>
  </div>
</div>
`;
